Made world map bg blue, fixed more cropping issues

--- a/frontend/src/OtherPages/WorldMap/WorldMap.css
+++ b/frontend/src/OtherPages/WorldMap/WorldMap.css
@@ -1,23 +1,26 @@
-body {
+html, body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background: black;
+    background: cornflowerblue;
     color: white;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 #map-container {
-    width: 120%;
-    height: 120%;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: cornflowerblue;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: auto;
 }
 
 #map-container svg {
-    width: 120%;
-    height: 120;
-    max-width: 120%;
-    max-height: 120%;
+    width: 100%;
+    height: auto;
     cursor: pointer;
 }
 
